fix: stretch page to screen height

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,4 +5,5 @@
     display: flex;
     flex-direction: column;
     min-width: 320px;
+    min-height: 100vh;
 }
